fix visibilty issues

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ form{
   font-weight: 500;
 }
 .inputs{
-  width:50%;
+  width:70%;
   display: flex;
   flex-flow: row wrap
 }
